# ora-grounding

./: .gitignore  README.md  pyproject.toml
src/ora_grounding/: __init__.py  grounding.py  review.py
tests/: test_grounding.py  test_review.py
workflows/: tests.yml
